<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shortest Walking Route</string>
    <string name="cell1_tag">Location</string>
    <string name="cell2_tag">Accuracy(m)</string>
    <string name="cell3_tag">Speed(m/s)</string>
    <string name="obtaining_location">Obtaining Location</string>
    <string name="pipe_divider">\u0020|\u0020</string>
    <string name="fragment0">Capture Route</string>
    <string name="fragment1">Display Routes</string>

    <string-array name="fragment_names">
        <item>@string/fragment0</item>
        <item>@string/fragment1</item>
    </string-array>

    <string name="ic_launcher_description">Launcher icon</string>
    <string name="ic_menu_capture_description">Capture Route menu icon</string>
    <string name="ic_menu_display_description">Display Routes menu icon</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="route">Route </string>
    <string name="select_routes_to_display">Routes</string>
    <string name="capturing_route">Capturing Route</string>
    <string name="comma">,</string>
    <string name="capturingroute">capturingRoute</string>
    


    
</resources>
