<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ic_menu_capture_description"
        android:orientation="horizontal"
        android:paddingBottom="1dip"
        android:paddingTop="1dip" >

        <ImageView
            android:id="@+id/activityIcon"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/ic_menu_capture_description"
            android:src="@drawable/ic_menu_capture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/activityIcon"
            android:text="@string/fragment0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/captureProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/captureButton"
            android:visibility="invisible" />

        <Button
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/start" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/ics_cyan" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/capture_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:stretchColumns="*" >

                <TableRow>

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/cell1_tag"
                        android:textColor="@color/solid_blue"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/pipe_divider"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/cell2_tag"
                        android:textColor="@color/solid_red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/pipe_divider"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/cell3_tag"
                        android:textColor="@color/solid_green"
                        android:textStyle="bold" />
                </TableRow>
                <!--
    	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_gravity="left"
	            android:text="@string/gps_tag" />

	        <TextView
	            android:id="@+id/gps_display"
	            android:layout_gravity="right"
	            android:text="@string/obtaining_location" />
	    </TableRow>
                -->

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>