<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/solid_white" >

    <TextView
        android:id="@+id/rowText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/cell1_tag"
        android:textColor="@color/solid_blue" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/rowText1"
        android:layout_toRightOf="@id/rowText1" />

    <TextView
        android:id="@+id/commaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/latitudeText"
        android:layout_toRightOf="@id/latitudeText"
        android:text="@string/comma" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/commaText"
        android:layout_toRightOf="@id/commaText" />

    <TextView
        android:id="@+id/rowText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rowText1"
        android:text="@string/cell2_tag"
        android:textColor="@color/solid_red" />

    <TextView
        android:id="@+id/accuracyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/rowText2"
        android:layout_toRightOf="@id/rowText2" />

    <TextView
        android:id="@+id/rowText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rowText2"
        android:text="@string/cell3_tag"
        android:textColor="@color/solid_green" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/rowText3"
        android:layout_toRightOf="@id/rowText3" />

</RelativeLayout>